[gd_scene load_steps=22 format=3 uid="uid://cjeqnkshpv0ep"]

[ext_resource type="Script" path="res://scenes/game_object/basic_enemy/basic_enemy.gd" id="1_sgouf"]
[ext_resource type="Texture2D" uid="uid://bt3ltqn3i4hp0" path="res://asserts/game_object/basic_enemy/mouse_gary.png" id="2_ty4dp"]
[ext_resource type="PackedScene" uid="uid://tkptanvg28it" path="res://scenes/component/health_component.tscn" id="2_yjtd0"]
[ext_resource type="PackedScene" uid="uid://l7x5r227k12c" path="res://scenes/component/vial_drop_component.tscn" id="3_oygv1"]
[ext_resource type="PackedScene" uid="uid://d318sgfeltvpx" path="res://scenes/component/hurtbox_component.tscn" id="4_lampc"]
[ext_resource type="PackedScene" uid="uid://b428h23fxjsjv" path="res://scenes/component/death_component.tscn" id="4_ojgks"]
[ext_resource type="PackedScene" uid="uid://b2jilhcdk5g5s" path="res://scenes/component/velocity_component.tscn" id="4_p80ie"]
[ext_resource type="PackedScene" uid="uid://dgoqeo7fg7234" path="res://scenes/component/hit_flash_component.tscn" id="8_pmp76"]
[ext_resource type="AudioStream" uid="uid://dxp5wc3go6fgv" path="res://asserts/audio/footstep_carpet_000.ogg" id="9_s6u2a"]
[ext_resource type="PackedScene" uid="uid://s00n7b7niic8" path="res://scenes/component/random_stream_player_2d_component.tscn" id="10_l0jsa"]
[ext_resource type="AudioStream" uid="uid://bhb58qeotlhct" path="res://asserts/audio/footstep_carpet_001.ogg" id="11_pti01"]
[ext_resource type="AudioStream" uid="uid://7b8luc6q4fln" path="res://asserts/audio/footstep_carpet_002.ogg" id="12_2ylbl"]
[ext_resource type="AudioStream" uid="uid://bf6oydqpw1cms" path="res://asserts/audio/footstep_carpet_003.ogg" id="13_pgykf"]
[ext_resource type="AudioStream" uid="uid://dxq21fn83vkjb" path="res://asserts/audio/footstep_carpet_004.ogg" id="14_06s2a"]

[sub_resource type="Animation" id="Animation_g7tj0"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Visuals/Sprite2D:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(0, 4)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Visuals/Sprite2D:rotation")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [0.0]
}

[sub_resource type="Animation" id="Animation_6d468"]
resource_name = "walk"
length = 0.4
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Visuals/Sprite2D:position")
tracks/0/interp = 2
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.3),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [Vector2(0, 4), Vector2(-1, 4), Vector2(1, 4)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Visuals/Sprite2D:rotation")
tracks/1/interp = 2
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 0,
"values": [0.0, 0.174533, -0.174533, 0.174533]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_gwp7c"]
_data = {
"RESET": SubResource("Animation_g7tj0"),
"walk": SubResource("Animation_6d468")
}

[sub_resource type="Shader" id="Shader_ucdie"]
resource_local_to_scene = true
code = "shader_type canvas_item;

uniform float lerp_percent : hint_range(0.0, 1.0);

void vertex() {
	// Called for every vertex the material is visible on.
}

void fragment() {
	// Called for every pixel the material is visible on.
	vec4 texture_color = texture(TEXTURE, UV);
	vec4 final_color = mix(texture_color, vec4(1.0, 1.0, 1.0, texture_color.a), lerp_percent);
	COLOR = final_color;
	
}

//void light() {
	// Called for every pixel for every light affecting the CanvasItem.
	// Uncomment to replace the default light processing function with this one.
//}
"

[sub_resource type="ShaderMaterial" id="ShaderMaterial_b616v"]
resource_local_to_scene = true
shader = SubResource("Shader_ucdie")
shader_parameter/lerp_percent = 0.0

[sub_resource type="CircleShape2D" id="CircleShape2D_pa2dh"]
radius = 12.0

[sub_resource type="CircleShape2D" id="CircleShape2D_2cd78"]
radius = 5.0

[node name="BasicEnemy" type="CharacterBody2D" groups=["enemy"]]
collision_layer = 8
collision_mask = 9
motion_mode = 1
script = ExtResource("1_sgouf")

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_gwp7c")
}
autoplay = "walk"

[node name="HealthComponent" parent="." instance=ExtResource("2_yjtd0")]

[node name="VialDropComponent" parent="." node_paths=PackedStringArray("health_component") instance=ExtResource("3_oygv1")]
drop_percent = 0.35
health_component = NodePath("../HealthComponent")

[node name="VelocityComponent" parent="." instance=ExtResource("4_p80ie")]

[node name="HitFlashComponent" parent="." node_paths=PackedStringArray("health_compnent", "sprite") instance=ExtResource("8_pmp76")]
health_compnent = NodePath("../HealthComponent")
sprite = NodePath("../Visuals/Sprite2D")
hit_flash_meterial = SubResource("ShaderMaterial_b616v")

[node name="DeathComponent" parent="." node_paths=PackedStringArray("health_component", "sprite") instance=ExtResource("4_ojgks")]
health_component = NodePath("../HealthComponent")
sprite = NodePath("../Visuals/Sprite2D")

[node name="HurtboxComponent" parent="." node_paths=PackedStringArray("health_component") instance=ExtResource("4_lampc")]
collision_layer = 0
collision_mask = 4
health_component = NodePath("../HealthComponent")

[node name="CollisionShape2D2" type="CollisionShape2D" parent="HurtboxComponent"]
light_mask = 0
visibility_layer = 4
position = Vector2(0, -5)
shape = SubResource("CircleShape2D_pa2dh")

[node name="Visuals" type="Node2D" parent="."]

[node name="Sprite2D" type="Sprite2D" parent="Visuals"]
position = Vector2(0, 4)
texture = ExtResource("2_ty4dp")
offset = Vector2(0, -8)

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(0, -5)
shape = SubResource("CircleShape2D_2cd78")

[node name="HitRandomAudioPlayer2DComponent" parent="." instance=ExtResource("10_l0jsa")]
max_distance = 300.0
attenuation = 0.5
streams = Array[AudioStream]([ExtResource("9_s6u2a"), ExtResource("11_pti01"), ExtResource("12_2ylbl"), ExtResource("13_pgykf"), ExtResource("14_06s2a")])

[connection signal="died" from="HealthComponent" to="DeathComponent" method="_on_health_component_died"]
